fix overflow texts and date filter in lost catalogue

--- a/frontend/lost-and-found/src/Pages/LostItemForm/LostItemForm.css
+++ b/frontend/lost-and-found/src/Pages/LostItemForm/LostItemForm.css
@@ -106,3 +106,9 @@ li{
   list-style-type: none;
 }
 
+.title-styling{
+  max-height: 30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
